// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsletterPuffLink renders the link with the text \`Manage preferences here\` 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "rippleRadius": undefined,
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={Object {}}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#006699",
        }
      }
    >
      Manage preferences here
    </Text>
    <View
      style={
        Object {
          "margin": "auto",
          "paddingLeft": 8,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        aria-label="icon-forward-arrow"
        bbHeight={12}
        bbWidth={7}
        focusable={false}
        height={12}
        meetOrSlice={0}
        minX={42}
        minY={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 7,
            },
          ]
        }
        vbHeight={120}
        vbWidth={60}
        width={7}
      >
        <RNSVGGroup>
          <RNSVGGroup
            fill={-16750951}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`NewsletterPuffLink should track link viewed and clicked in analytics 1`] = `
Object {
  "0": Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "article_parent_name": "RED BOX",
        "eventTime": "2018-01-01T00:00:00.000Z",
        "event_navigation_action": "navigation",
        "event_navigation_browsing_method": "automated",
        "event_navigation_name": "widget : puff : manage preferences here : displayed",
      },
      "component": "Page",
      "object": "NewsletterPuffLink",
    },
  ],
  "1": Array [
    Object {
      "action": "onPress",
      "attrs": Object {
        "article_parent_name": "RED BOX",
        "eventTime": "2018-01-01T00:00:00.000Z",
        "event_navigation_action": "navigation",
        "event_navigation_browsing_method": "click",
        "event_navigation_name": "widget : puff : manage preferences here",
      },
      "component": "NewsletterPuffLink",
      "object": "NewsletterPuffLink",
    },
  ],
}
`;

exports[`NewsletterPuffLink should track link viewed in analytics 1`] = `
Object {
  "0": Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "article_parent_name": "RED BOX",
        "eventTime": "2018-01-01T00:00:00.000Z",
        "event_navigation_action": "navigation",
        "event_navigation_browsing_method": "automated",
        "event_navigation_name": "widget : puff : manage preferences here : displayed",
      },
      "component": "Page",
      "object": "NewsletterPuffLink",
    },
  ],
}
`;
